# agentguard

./: .env.example  .gitignore  README.md  auth.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  publish-sdk.yml
app/: globals.css  layout.tsx  page.tsx
app/app/: page.tsx
app/login/: page.tsx
app/signin/: page.tsx
aws/: cdk.json  package.json  pnpm-lock.yaml
aws/iac/: stack.ts
aws/lambda/: index.mjs  package.json  webhook.mjs
aws/probe-service/: Dockerfile  app.py  requirements.txt
benchmarks/: baseline-v1.json  injection-v1.json  injection.schema.json
cdk.out/: AgentGuardStack.assets.json  AgentGuardStack.metadata.json  AgentGuardStack.template.json  manifest.json  tree.json
components/: agentguard-logo.tsx  key-manager.tsx  platform-console.tsx  scanner-playground.tsx  site-header.tsx
docs/: demo-script.md  devpost-submission.md
examples/python/: framework_middleware.py  scan.py
lib/: api-auth.ts  auth.ts  aws.ts  chunking.test.ts  chunking.ts  contracts.ts  limits.ts  platform-utils.ts  policy.test.ts  policy.ts  provider-crypto.ts  providers.test.ts  providers.ts  scan-document.test.ts  scan-document.ts  scan.test.ts  scan.ts  tenant.test.ts  tenant.ts  trace.test.ts  trace.ts  webhook-url.test.ts  webhook-url.ts  webhooks.ts  workspace.ts
scripts/: capture-demo.mjs  run-injection-benchmark.ts
sdk/python/: README.md  agentguard.py  pyproject.toml
sdk/python/src/agentguard/: __init__.py  client.py  middleware.py
sdk/python/tests/: test_client.py  test_middleware.py
types/: next-auth.d.ts
(+40 files in other folders)
